force-app/main/default/objects/Account/fields/Partenariat_commercial__c.field-meta.xml
<CustomField>
    <fullName>Partenariat_commercial__c</fullName>
    <description>Le type de partenariat commercial qui a été conclu avec l&apos;entreprise.</description>
    <label>Partenariat commercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>