force-app/main/default/objects/Account/fields/Pays_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Pays_de_naissance__c</fullName>
    <label>Pays de naissance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>