force-app/main/default/objects/Account/fields/Pourcentage_de_VP__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_de_VP__c</fullName>
    <description>Pourcentage de véhicule particuliers présents dans le parc</description>
    <label>Pourcentage de VP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>