force-app/main/default/objects/Account/fields/Pourcentage_de_VU__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_de_VU__c</fullName>
    <description>Pourcentage de véhicules  utilitaires présents dans le parc</description>
    <label>Pourcentage de VU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>