force-app/main/default/objects/Account/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <description>Domaine de profession</description>
    <label>Profession</label>
    <length>25</length>
    <type>Text</type>
</CustomField>