force-app/main/default/objects/Account/fields/Raison_sociale__c.field-meta.xml
<CustomField>
    <fullName>Raison_sociale__c</fullName>
    <description>La raison sociale de l&apos;entité</description>
    <label>Raison sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>