force-app/main/default/objects/Account/fields/Residence_principale__c.field-meta.xml
<CustomField>
    <fullName>Residence_principale__c</fullName>
    <description>identifier si propriétaire ou locataire</description>
    <label>Résidence principale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propriétaire</fullName>
            </value>
            <value>
                <fullName>Locataire</fullName>
            </value>
            <value>
                <fullName>En accession à la propriété</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>