force-app/main/default/objects/Account/fields/Revenus__c.field-meta.xml
<CustomField>
    <fullName>Revenus__c</fullName>
    <label>Revenus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>