force-app/main/default/objects/Account/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>use in email template</description>
    <formula>IF(ISPICKVAL(Salutation,&apos;Mr.&apos;),&apos;Cher Monsieur&apos;,IF(ISPICKVAL(Salutation,&apos;Ms.&apos;),&apos;Chère Madame&apos;,&apos;&apos;))</formula>
    <label>Salutation</label>
    <type>Text</type>
</CustomField>