force-app/main/default/objects/Account/fields/Siret__c.field-meta.xml
<CustomField>
    <fullName>Siret__c</fullName>
    <description>SIRET du compte</description>
    <label>Siret</label>
    <length>14</length>
    <type>Text</type>
</CustomField>