force-app/main/default/objects/Account/fields/Statut_marital__c.field-meta.xml
<CustomField>
    <fullName>Statut_marital__c</fullName>
    <description>Situation marital</description>
    <label>Statut marital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A définir ?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>