force-app/main/default/objects/Account/fields/Statut_telephone_fixe__c.field-meta.xml
<CustomField>
    <fullName>Statut_telephone_fixe__c</fullName>
    <description>Statut  telephone fixe du contact (Numéro de téléphone erroné / Ne répond pas )</description>
    <label>Statut téléphone fixe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRP</fullName>
            </value>
            <value>
                <fullName>NPAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>