force-app/main/default/objects/Account/fields/Statut_telephone_portable__c.field-meta.xml
<CustomField>
    <fullName>Statut_telephone_portable__c</fullName>
    <description>Statut  téléphone portable du contact (Numéro de téléphone erroné / Ne répond pas )</description>
    <label>Statut téléphone portable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRP</fullName>
            </value>
            <value>
                <fullName>NPAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>