force-app/main/default/objects/Account/fields/Taille_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Taille_de_l_entreprise__c</fullName>
    <description>Nombre d&apos;employés</description>
    <label>Taille de l&apos;entreprise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>