force-app/main/default/objects/Account/fields/Taille_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Taille_du_foyer__c</fullName>
    <description>Composition du foyer</description>
    <label>Nombre de personne à charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>