force-app/main/default/objects/Account/fields/Taille_du_parc_potentiel__c.field-meta.xml
<CustomField>
    <fullName>Taille_du_parc_potentiel__c</fullName>
    <description>Données sur la fourchette (Nbre ) de VP et VU confondus- A choisir parmis les données de la liste de sélection</description>
    <inlineHelpText>Ex fourchette: 1, 2 à 5, 5 à 15, 15 à 50, 50+</inlineHelpText>
    <label>Taille du parc potentiel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>