force-app/main/default/objects/Account/fields/Type_d_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Type_d_enregistrement__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>