force-app/main/default/objects/Account/fields/Type_de_tiers__c.field-meta.xml
<CustomField>
    <fullName>Type_de_tiers__c</fullName>
    <label>Type de tiers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Garant</fullName>
            </value>
            <value>
                <fullName>Non Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Prospect Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>