force-app/main/default/objects/Account/fields/Ville_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Ville_de_naissance__c</fullName>
    <label>Ville de naissance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>