force-app/main/default/objects/Account/recordTypes/ClientB2B.recordType-meta.xml
<RecordType>
    <fullName>ClientB2B</fullName>
    <active>true</active>
    <description>Pour les comptes clients B2B</description>
    <label>Client B2B</label>
</RecordType>