force-app/main/default/objects/Account/recordTypes/DU_BusinessAccount.recordType-meta.xml
<RecordType>
    <fullName>DU_BusinessAccount</fullName>
    <active>true</active>
    <label>VWFS CRM Business Account</label>
</RecordType>