force-app/main/default/objects/Account/recordTypes/DU_DealerAccount.recordType-meta.xml
<RecordType>
    <fullName>DU_DealerAccount</fullName>
    <active>true</active>
    <label>VWFS CRM Dealer Account</label>
</RecordType>