force-app/main/default/objects/Account/recordTypes/Partenaire_Reseau.recordType-meta.xml
<RecordType>
    <fullName>Partenaire_Reseau</fullName>
    <active>true</active>
    <description>Pour les comptes Partenaires/Réseaux (concessions)</description>
    <label>Partenaire/Réseau</label>
</RecordType>