force-app/main/default/objects/Account/validationRules/Account_Name_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Name,&apos;[a-zA-Z0-9 àâäèéêëîïôœùûüÿçÀÂÄÈÉÊËÎÏÔŒÙÛÜŸÇ]*&apos;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name is in incorrect format</errorMessage>
</ValidationRule>