force-app/main/default/objects/Account/validationRules/DU_CustomerMustHaveBpId.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_CustomerMustHaveBpId</fullName>
    <active>true</active>
    <description>Customers must have Business Partner ID filled out.</description>
    <errorConditionFormula>RecordType.DeveloperName != &quot;DU_DealerAccount&quot; &amp;&amp; ISBLANK(DU_BusinessPartnerID__c) &amp;&amp; DU_IsCustomer__c</errorConditionFormula>
    <errorDisplayField>DU_IsCustomer__c</errorDisplayField>
    <errorMessage>Customers must have Business Partner ID filled out.</errorMessage>
</ValidationRule>