force-app/main/default/objects/Account/validationRules/DU_CustomersCannotBeChangedDirectly.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_CustomersCannotBeChangedDirectly</fullName>
    <active>true</active>
    <description>Customers are read only. Changes are allowed only to users of the &quot;System Administrator&quot; profile or with the &quot;Customer Integration&quot; permission.</description>
    <errorConditionFormula>DU_IsCustomer__c &amp;&amp; !ISNEW() &amp;&amp; $Profile.Name != &quot;System Administrator&quot; &amp;&amp; !$Permission.DU_CustomerIntegration 
/* please list any custom roll-up fields and fields that can be changed by non-admins */
&amp;&amp; !ISCHANGED(DU_LastModificationOnRelatedOpportunity__c)</errorConditionFormula>
    <errorMessage>Customers are read only. Changes are allowed only to users of the &quot;System Administrator&quot; profile or with the &quot;Customer Integration&quot; permission.</errorMessage>
</ValidationRule>