force-app/main/default/objects/Account/validationRules/DU_EmailMandatoryForB2CProspects.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_EmailMandatoryForB2CProspects</fullName>
    <active>true</active>
    <description>Email is mandatory for B2C Prospects.</description>
    <errorConditionFormula>RecordType.DeveloperName == &quot;DU_PersonAccount&quot; &amp;&amp; !DU_IsCustomer__c &amp;&amp; ISBLANK(PersonEmail)</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Email is mandatory for B2C Prospects.</errorMessage>
</ValidationRule>