force-app/main/default/objects/Account/validationRules/DU_PersonAccountMustHaveIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_PersonAccountMustHaveIndividual</fullName>
    <active>true</active>
    <errorConditionFormula>IsPersonAccount &amp;&amp; ISBLANK(PersonIndividual.Id)</errorConditionFormula>
    <errorDisplayField>PersonIndividualId</errorDisplayField>
    <errorMessage>Every PersonAccount record must have an Individual assigned.</errorMessage>
</ValidationRule>