force-app/main/default/objects/Account/validationRules/ModificationNomDuCompteParAgentOuManager.validationRule-meta.xml
<ValidationRule>
    <fullName>ModificationNomDuCompteParAgentOuManager</fullName>
    <active>true</active>
    <description>Cette règle empêche la modification du nom du Compte si le profil de l&apos;utilisateur est &quot;Agent&quot; ou &quot;Manager&quot;</description>
    <errorConditionFormula>AND(
OR(
ISCHANGED(Name),
ISCHANGED(Salutation)
),
OR(
$Profile.Name = &apos;Agent&apos;,
$Profile.Name = &apos;Manager&apos;
)
)</errorConditionFormula>
    <errorMessage>Vos privilèges ne vous permettent pas de modifier ce champ</errorMessage>
</ValidationRule>