force-app/main/default/objects/Account/listViews/DU_AllAccounts.listView-meta.xml
<ListView>
    <fullName>DU_AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>VWFS CRM All Accounts</label>
</ListView>