force-app/main/default/objects/Account/listViews/DU_AllBusinessAccounts.listView-meta.xml
<ListView>
    <fullName>DU_AllBusinessAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.DU_BusinessAccount</value>
    </filters>
    <label>VWFS CRM All Business Accounts</label>
</ListView>