force-app/main/default/objects/Account/listViews/DU_AllPersonAccounts.listView-meta.xml
<ListView>
    <fullName>DU_AllPersonAccounts</fullName>
    <columns>PC_SALUTATION</columns>
    <columns>PC_FIRST_NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.DU_PersonAccount</value>
    </filters>
    <label>VWFS CRM All Person Accounts</label>
</ListView>